--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Single page web app that will take random ideas from users and display them",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Tom Pena",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
