--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Tom Pena",
   "license": "MIT",
   "dependencies": {
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
